2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnsealedConcreteAttributesTest.cs: New. Unit tests by 
	Daniel Abramov
	* Test.Rules.Performance.mdp: Add new test for MonoDevelop project 
	file.

2008-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidReturningArraysOnPropertiesTest.cs: New. Unit tests by 
	Adrian Tsai
	* AvoidUninstantiatedInternalClassesTest.cs: Add new enum test cases.
	* Test.Rules.Performance.mdp: Add new test for MonoDevelop project 
	file.

2007-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs, AvoidUnusedParametersTest.cs:
	Fix anonymous test cases since GMCS and CSC don't compile the types,
	or methods, using the same names.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidUnusedParametersTest.cs: Added a testcase for anonymous methods
	due #350288 bug.

2007-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Change the behavior of
	a test since the condition is already checked by another rule.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUncalledPrivateCodeTest.cs: Added testcase for check compiler
	generated methods, by example anonymous methods.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUncalledPrivateCodeTest.cs: Change behaviour, it's ok to have
	unused private ctor (and it's common before static classes were 
	available).
	* AvoidUnusedParametersTest.cs: Added test cases for operators when
	tracking some false positives reported in Cecil (make self-check)

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case for explicit 
	interface implementation.

2007-11-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Moved class outside
	the fixture (because it made them all nested). Removed test for 
	InternalsVisibleToAttribute. This must be done from another assembly 