@@ -1,3 +1,8 @@
+2008-01-08  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUncalledPrivateCodeTest.cs: Add more test cases for 
+	serialization constructors.
+
 2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUnsealedConcreteAttributesTest.cs: New. Unit tests by 
